--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--suppress AndroidDomInspection -->
 <resources>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
@@ -8,15 +9,226 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-<!--    colori team    -->
-    <color name="Mercedes">#00D2BE</color>
-    <color name="RedBull">#243BB4</color>
-    <color name="Ferrari">#DC0000</color>
-    <color name="McLaren">#FF9800</color>
-    <color name="AstonMartin">#006F62</color>
-    <color name="AlpineF1Team">#0090FF</color>
-    <color name="AlphaTauri">#2B4562</color>
-    <color name="AlfaRomeo">#900000</color>
-    <color name="HaasF1Team">#9C9C9C</color>
-    <color name="Williams">#0011FF</color>
+    <color name="mercedes">#00D2BE</color>
+    <color name="red_bull">#243BB4</color>
+    <color name="ferrari">#DC0000</color>
+    <color name="mclaren">#FF9800</color>
+    <color name="aston_martin">#006F62</color>
+    <color name="alpine">#0090FF</color>
+    <color name="alphatauri">#2B4562</color>
+    <color name="alfa">#900000</color>
+    <color name="haas">#9C9C9C</color>
+    <color name="williams">#0011FF</color>
+
+
+    <color name="adams">#FF0000</color>
+    <color name="afm">#00FF00</color>
+    <color name="ags">#0000FF</color>
+    <color name="alta">#FF9900</color>
+    <color name="amon">#99FF00</color>
+    <color name="moda">#0099FF</color>
+    <color name="apollon">#FF0099</color>
+    <color name="arrows">#9900FF</color>
+    <color name="arzani_volpini">#FFCC00</color>
+    <color name="butterworth">#00CCFF</color>
+    <color name="ats">#006600</color>
+    <color name="bar">#000066</color>
+    <color name="behra_porsche">#660066</color>
+    <color name="bellasi">#336600</color>
+    <color name="benetton">#663300</color>
+    <color name="bmw">#666600</color>
+    <color name="bmw_sauber">#336633</color>
+    <color name="boro">#660033</color>
+    <color name="brabham">#CC6600</color>
+    <color name="brabham_alfa_romeo">#663366</color>
+    <color name="brabham_brm">#996633</color>
+    <color name="brabham_climax">#336699</color>
+    <color name="brabham_ford">#999966</color>
+    <color name="brabham_repco">#669999</color>
+    <color name="brawn">#FF6600</color>
+    <color name="brm">#006633</color>
+    <color name="brm_ford">#FF3300</color>
+    <color name="bromme">#CC33CC</color>
+    <color name="brp">#3333CC</color>
+    <color name="bugatti">#33CC33</color>
+    <color name="caterham">#CC66CC</color>
+    <color name="vhristensen">#99CC00</color>
+    <color name="cisitalia">#33CC66</color>
+    <color name="coloni">#CC3333</color>
+    <color name="connaught">#333366</color>
+    <color name="connew">#993366</color>
+    <color name="cooper">#336633</color>
+    <color name="cooper_alfa_romeo">#9966CC</color>
+    <color name="cooper_ats">#669933</color>
+    <color name="cooper_borgward">#CC6699</color>
+    <color name="cooper_brm">#99CC99</color>
+    <color name="cooper_castellotti">#996699</color>
+    <color name="cooper_climax">#CC9933</color>
+    <color name="cooper_ferrari">#6699CC</color>
+    <color name="cooper_ford">#CCCC33</color>
+    <color name="cooper_maserati">#99CCCC</color>
+    <color name="cooper_osca">#CC99CC</color>
+    <color name="dallara">#CC9966</color>
+    <color name="tomaso">#666633</color>
+    <color name="de_tomaso_alfa_romeo">#3333FF</color>
+    <color name="de_tomaso_ferrari">#9933FF</color>
+    <color name="de_tomaso_osca">#33FF33</color>
+    <color name="deidt">#FF33FF</color>
+    <color name="del_roy">#66FF33</color>
+    <color name="derrington">#CC33FF</color>
+    <color name="dunn">#33FFFF</color>
+    <color name="eagle">#FFCC33</color>
+    <color name="eagle_climax">#33FFCC</color>
+    <color name="eagle_weslake">#CCFF33</color>
+    <color name="elder">#CC66FF</color>
+    <color name="hill">#6666FF</color>
+    <color name="emeryson">#996600</color>
+    <color name="emw">#99FF33</color>
+    <color name="enb">#FF99CC</color>
+    <color name="ensign">#FF9966</color>
+    <color name="epperly">#CC9999</color>
+    <color name="era">#33CC99</color>
+    <color name="eurobrun">#99CC66</color>
+    <color name="ewing">#996633</color>
+    <color name="extech">#33CCCC</color>
+    <color name="fairthorpe">#CCCC66</color>
+    <color name="ferguson">#33CC00</color>
+    <color name="ferrari_alfa_romeo">#CCCC00</color>
+    <color name="ferrari_ford">#00CC66</color>
+    <color name="ferrari_maserati">#CCCC99</color>
+    <color name="fittipaldi">#00CCCC</color>
+    <color name="fondmetal">#CC3300</color>
+    <color name="ford">#CC33CC</color>
+    <color name="forti">#66CC33</color>
+    <color name="fp_italiane">#996699</color>
+    <color name="freikaiserwagen">#33CCFF</color>
+    <color name="frerriere">#CC66CC</color>
+    <color name="frissbee">#66CC66</color>
+    <color name="gartrac">#33CC33</color>
+    <color name="genesis">#99CC99</color>
+    <color name="ghibli">#33CC66</color>
+    <color name="gilby">#99CC00</color>
+    <color name="giussani">#33CCCC</color>
+    <color name="gordini">#66CC00</color>
+    <color name="hassan">#99CCCC</color>
+    <color name="hwm">#33CC99</color>
+    <color name="heco">#9966CC</color>
+    <color name="hersham_and_walton_motors">#33CC00</color>
+    <color name="hill_alfa_romeo">#66CC33</color>
+    <color name="hill_borgward">#99CC66</color>
+    <color name="hill_climax">#33CCFF</color>
+    <color name="hill_ferrari">#CC99CC</color>
+    <color name="hill_ford">#66CCCC</color>
+    <color name="hill_maserati">#33CC99</color>
+    <color name="honda">#66CC66</color>
+    <color name="hrt">#33CC33</color>
+    <color name="hsr">#99CC33</color>
+    <color name="hrudey">#33CC66</color>
+    <color name="ico">#CC6600</color>
+    <color name="imperia">#9933CC</color>
+    <color name="isetta">#6600CC</color>
+    <color name="iso">#33CC00</color>
+    <color name="jaguar">#00CC99</color>
+    <color name="jaguar_privateer">#CC9966</color>
+    <color name="jbw">#00CCCC</color>
+    <color name="kauhsen">#CC00CC</color>
+    <color name="kurtis_kraft">#0066CC</color>
+    <color name="la_vie_claire">#990000</color>
+     <color name="lamborghini">#009900</color>
+     <color name="lancia">#000099</color>
+     <color name="larrousse">#990099</color>
+     <color name="lerois_des_belges">#009999</color>
+     <color name="ligier">#990033</color>
+     <color name="lola">#330099</color>
+     <color name="lotus">#993300</color>
+     <color name="lotus_privateer">#330033</color>
+     <color name="lyons">#993366</color>
+     <color name="maki">#330066</color>
+     <color name="manor">#993333</color>
+     <color name="maserati">#993333</color>
+     <color name="lago">#26A6EF</color>
+     <color name="march">#3300CC</color>
+     <color name="march_alfa_romeo">#996600</color>
+     <color name="march_ford">#CC9966</color>
+     <color name="mclaren_alfa_romeo">#66CC00</color>
+     <color name="mclaren_brm">#996633</color>
+     <color name="mclaren_climax">#66CC33</color>
+
+     <color name="mclaren_ford">#996666</color>>
+     <color name="mclaren_serenissima">#66CC99</color>
+     <color name="mercedes_ford">#66CC66</color>
+     <color name="mercedes_maserati">#996699</color>
+     <color name="mercedes_safety_car">#33FF00</color>
+      <color name="merzario">#9966CC</color>
+      <color name="mf1">#33FF00</color>
+      <color name="midget">#9966FF</color>
+      <color name="minardi">#FF6600</color>
+      <color name="mm">#33FF33</color>
+      <color name="modena">#FF3333</color>
+      <color name="moore">#33FF66</color>
+      <color name="msu">#FF3366</color>
+      <color name="mw">#33FF99</color>
+      <color name="ok">#FF3399</color>
+      <color name="offenhauser">#33FFCC</color>
+      <color name="ohsawa">#FF33CC</color>
+      <color name="olas">#33FFFF</color>
+      <color name="osca">#CC9900</color>
+      <color name="osella">#996600</color>
+      <color name="otavite">#996666</color>
+      <color name="owosso">#66FF00</color>
+      <color name="pacific">#00FF33</color>
+      <color name="palex">#996633</color>
+      <color name="pandara">#00FF66</color>
+      <color name="para">#00FF99</color>
+      <color name="pecon">#00FFCC</color>
+      <color name="penske">#996699</color>
+      <color name="phoenix">#660000</color>
+      <color name="porsche">#009900</color>
+      <color name="prost">#000099</color>
+      <color name="ram">#0099CC</color>
+      <color name="rascasse">#0099FF</color>
+      <color name="rebaque">#0000CC</color>
+      <color name="reble">#0000FF</color>
+      <color name="renault">#F9F503</color>
+      <color name="richardson">#00CC66</color>
+      <color name="ride">#00CC99</color>
+      <color name="rolls_royce">#00CCCC</color>
+      <color name="rosso">#00CCFF</color>
+      <color name="racing_point">#FF6CC4</color>
+      <color name="sahara">#009966</color>
+      <color name="sauber">#009999</color>
+      <color name="scaglione">#009933</color>
+      <color name="schroeder">#009966</color>
+      <color name="simtek">#FF0033</color>
+      <color name="shadow">#00FF00</color>
+      <color name="shadow_ford">#33FF33</color>
+      <color name="shadow_maserati">#99FF99</color>
+      <color name="sharpe">#33FF00</color>
+      <color name="sheppard">#66FF33</color>
+      <color name="simpson">#99FF66</color>
+      <color name="stoner">#33FF66</color>
+      <color name="subaru">#99FF99</color>
+      <color name="surtees">#99FFCC</color>
+    <color name="talbot">#66FF00</color>
+    <color name="tandy">#33FFFF</color>
+    <color name="tatra">#99FF00</color>
+    <color name="tecno">#00FF99</color>
+    <color name="tecno_palermo">#99FF33</color>
+    <color name="telaio_rosso">#00FFCC</color>
+    <color name="texas">#99FF00</color>
+    <color name="throver">#00FFFF</color>
+    <color name="toschi">#66FF66</color>
+    <color name="tosolini">#99FFFF</color>
+    <color name="trueman">#66FFFF</color>
+    <color name="tyrrell">#66FF99</color>
+    <color name="vanwall">#66FFFF</color>
+    <color name="veritas">#99CC33</color>
+    <color name="virage">#990066</color>
+    <color name="wolf">#99CC66</color>
+    <color name="zeiss">#CC9966</color>
+    <color name="zentradi">#00FF33</color>
+    <color name="zonta">#00FF66</color>
+    <color name="zsilinski">#99CC00</color>
+
+
 </resources>
