--- a/app/src/main/res/layout/fragment_championship.xml
+++ b/app/src/main/res/layout/fragment_championship.xml
@@ -11,20 +11,33 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:layout_width="226dp"
-            android:layout_height="106dp"
-            android:layout_marginStart="92dp"
-            android:layout_marginTop="219dp"
-            android:layout_marginEnd="93dp"
-            android:text="Classifica Team"
-            android:textAlignment="center"
-            android:textColor="#3F51B5"
-            android:textSize="34sp"
-            android:textStyle="bold"
+        <Spinner
+            android:id="@+id/constructorStandingsSpinner"
+            android:layout_width="wrap_content"
+            android:layout_height="32dp"
+            android:layout_marginBottom="2dp"
+            android:background="@drawable/navbar_shape"
+            android:dropDownWidth="match_parent"
+            android:elevation="40dp"
+            android:gravity="center_horizontal"
+            android:paddingStart="10dp"
+            android:paddingRight="10dp"
+            android:spinnerMode="dialog"
+            android:textAlignment="viewEnd"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/constructorRecycler"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.008"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.005" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
