--- a/app/src/main/res/layout/header_race_recycler_view.xml
+++ b/app/src/main/res/layout/header_race_recycler_view.xml
@@ -49,7 +49,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
-            android:src="@drawable/white_line"
+            android:src="@drawable/calendar_shape_header"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
