--- a/app/src/main/res/drawable/standings_bottom_border.xml
+++ b/app/src/main/res/drawable/standings_bottom_border.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-           <solid android:color="#BEBEBE" />
+           <solid android:color="#4D4D4D" />
             <corners
                 android:bottomLeftRadius="18dp"
                 android:bottomRightRadius="18dp"
