--- a/app/src/main/res/layout/fragment_circuit_info.xml
+++ b/app/src/main/res/layout/fragment_circuit_info.xml
@@ -16,10 +16,12 @@
 
             <ImageView
                 android:id="@+id/imageView18"
-                android:layout_width="330dp"
+                android:layout_width="match_parent"
                 android:layout_height="30dp"
                 android:layout_marginTop="25dp"
-                android:src="@drawable/white_line"
+                android:layout_marginEnd="15dp"
+                android:layout_marginStart="15dp"
+                android:src="@drawable/stats"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -27,10 +29,12 @@
 
             <ImageView
                 android:id="@+id/imageView20"
-                android:layout_width="330dp"
+                android:layout_width="match_parent"
                 android:layout_height="30dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginStart="15dp"
                 android:layout_marginTop="10dp"
-                android:src="@drawable/white_line"
+                android:src="@drawable/stats"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.493"
                 app:layout_constraintStart_toStartOf="parent"
@@ -38,10 +42,12 @@
 
             <ImageView
                 android:id="@+id/imageView22"
-                android:layout_width="330dp"
+                android:layout_width="match_parent"
+                android:layout_marginEnd="15dp"
+                android:layout_marginStart="15dp"
                 android:layout_height="30dp"
                 android:layout_marginTop="10dp"
-                android:src="@drawable/white_line"
+                android:src="@drawable/stats"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.493"
                 app:layout_constraintStart_toStartOf="parent"
@@ -49,10 +55,12 @@
 
             <ImageView
                 android:id="@+id/imageView23"
-                android:layout_width="330dp"
+                android:layout_width="match_parent"
                 android:layout_height="45dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginStart="15dp"
                 android:layout_marginTop="10dp"
-                android:src="@drawable/white_line"
+                android:src="@drawable/stats"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.493"
                 app:layout_constraintStart_toStartOf="parent"
@@ -60,10 +68,12 @@
 
             <ImageView
                 android:id="@+id/imageView24"
-                android:layout_width="330dp"
+                android:layout_width="match_parent"
                 android:layout_height="30dp"
                 android:layout_marginTop="10dp"
-                android:src="@drawable/white_line"
+                android:layout_marginEnd="15dp"
+                android:layout_marginStart="15dp"
+                android:src="@drawable/stats"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
