--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -14,4 +14,8 @@
         android:id="@+id/championshipFragment"
         android:icon="@drawable/car_icon"
         android:title="Team" />
+    <item
+        android:id="@+id/accountFragment"
+        android:icon="@drawable/baseline_person_24"
+        android:title="Account" />
 </menu>
