--- a/app/src/main/res/drawable/gradient_background.xml
+++ b/app/src/main/res/drawable/gradient_background.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:type="linear"
-        android:startColor="#9D9D9D"
-        android:centerColor="#222222"
-        android:endColor="#111111"
+        android:startColor="#585858"
+        android:centerColor="#151515"
+        android:endColor="#000000"
         android:angle="90" />
 </shape>
