--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="28dp"
             android:fontFamily="@font/formula1_bold"
-            android:text="Login"
+            android:text="Accedi con Google"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="30sp"
