--- a/app/src/main/res/layout/fragment_account_logged.xml
+++ b/app/src/main/res/layout/fragment_account_logged.xml
@@ -12,15 +12,13 @@
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/profilePic"
-            android:layout_width="216dp"
-            android:layout_height="197dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="24dp"
             app:circularflow_radiusInDP="75dp"
-            app:layout_constraintBottom_toTopOf="@+id/imageView28"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintBottom_toBottomOf="@+id/textView5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView5"
-            app:layout_constraintVertical_bias="0.5" />
+            app:layout_constraintTop_toTopOf="@+id/textView5" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/logoutButton"
@@ -59,14 +57,14 @@
             android:id="@+id/textView5"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="28dp"
+            android:layout_marginTop="32dp"
             android:fontFamily="@font/formula1_bold"
             android:text="ACCOUNT SETTINGS"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="30sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/profilePic"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
@@ -74,7 +72,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="236dp"
+            android:layout_marginTop="32dp"
             android:layout_marginEnd="10dp"
             android:src="@drawable/settings_shape"
             app:layout_constraintEnd_toEndOf="parent"
